KafkaProducer.flush() may be dangerous